# boruvka

./: CMakeLists.txt
parallel_boruvka/: CMakeLists.txt  main.cpp
parallel_boruvka/headers/: Boruvka.h  Component.h  Edge.h  Graph.h  Relation.h  RelationMatrix.h  Vertex.h
parallel_boruvka/sources/: Boruvka.cpp  Component.cpp  Edge.cpp  Graph.cpp  Relation.cpp  RelationMatrix.cpp  Vertex.cpp
